src/test/deca/syntax/invalid/homemade/lexer/test/test_lex_inv_circular_include2.deca
#include "test_lex_inv_circular_include1.deca"